--- a/apple.css
+++ b/apple.css
@@ -473,7 +473,7 @@ p {
         margin-top: 69px;
         margin-left: 13px;
         background: rgb(220, 229, 226);
-        width: 348px;
+        width: 95%;
         border-radius: 16px;
         height: 903px;
     }
