--- a/apple.css
+++ b/apple.css
@@ -452,7 +452,7 @@ p {
 
 @media (max-width: 800px) {
     body {
-        width: 97%;
+        width: 98%;
     }
     li {
         display: none;
@@ -487,7 +487,7 @@ p {
         position: absolute;
     }
     .sl1-p {
-        font-size: 15px;
+        font-size: 13px;
         margin-top: 331px;
         margin-left: 2px;
         position: absolute;
@@ -560,6 +560,9 @@ p {
         margin-top: 40px;
         margin-left: 21px;
     }
+    .sl3-p {
+        font-size: 13px;
+    }
     .blocks {
         display: block;
         margin-left: -128px;
@@ -617,6 +620,9 @@ p {
     .bl1-img {
         margin-left: 6px;
         margin-top: 90px;
+    }
+    .sl5-p {
+        font-size: 13px;
     }
     .sl6-h1 {
         margin-top: 70px;
@@ -706,6 +712,7 @@ p {
         position: absolute;
     }
     .con2-p {
+        font-size: 14px;
         margin-top: 151px;
         margin-left: -14px;
         position: absolute;
